# ee-preproc

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: unit.yaml
docs/: conf.py  index.rst  usage.rst
ee_preproc/: __init__.py
ee_preproc/landsat/: brdf_correction.py  landsat_collection.py  sun_angles.py  tasseled_cap.py  view_angles.py
ee_preproc/misc/: util.py
tests/: test_src.py
